--- a/confidentialite.html
+++ b/confidentialite.html
@@ -6,24 +6,49 @@
     <title>Politique de Confidentialité - Français Pratique</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 20px;
             background-color: #f4f4f9;
             color: #333;
+            line-height: 1.6;
         }
-        h1, h2 {
-            color: #4CAF50;
+        header {
+            background: #4CAF50;
+            color: #fff;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        h2 {
+            color: #333;
+            margin-top: 20px;
+            border-bottom: 2px solid #4CAF50;
+            padding-bottom: 5px;
         }
         p {
             margin: 15px 0;
+        }
+        ul {
+            margin: 10px 0 20px 20px;
+        }
+        footer {
+            margin-top: 30px;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 0.9em;
+            color: #777;
         }
     </style>
 </head>
 <body>
 
-<h1>Politique de Confidentialité</h1>
-
+<header>
+    <h1>Politique de Confidentialité</h1>
+</header>
 
 <h2>Introduction</h2>
 <p>Bienvenue dans la politique de confidentialité de l'application Français Pratique. Nous nous engageons à protéger et à respecter votre vie privée. Cette politique explique comment nous collectons, utilisons et partageons vos informations.</p>
@@ -66,7 +91,11 @@
 <p>Nous pouvons mettre à jour cette politique de confidentialité de temps à autre. Toute modification sera publiée sur cette page.</p>
 
 <h2>Contact</h2>
-<p>Pour toute question concernant cette politique de confidentialité, veuillez nous contacter à : [adresse e-mail de contact]</p>
+<p>Pour toute question concernant cette politique de confidentialité, veuillez nous contacter à : fplivecontact@gmail.com</p>
+
+<footer>
+    <p>&copy; 2024 Français Pratique. Tous droits réservés.</p>
+</footer>
 
 </body>
 </html>
