--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="footer">
         <p><strong>Commencez Votre Voyage Linguistique Dès Maintenant avec Français Pratique.</strong></p>
         <a href="https://play.google.com/store/apps/details?id=com.fp.lesprosfr" class="button">Téléchargez l'application</a>
-        <p>Version : 1.2.9 | Date de mise à jour : 10 jan. 2025</p>
+        <p>Version : 1.3.3 </p>
         <p>Nécessite Android 6.0 ou version ultérieure | Téléchargements : 1 000+</p>
         <p>Classification du contenu : 3 ans et plus</p>
     </div>
