ajout la politique conf de g play

--- a/index.html
+++ b/index.html
@@ -1,90 +1,125 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Français Pratique</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background: #4CAF50;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .container {
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-        }
-        h1, h2 {
-            color: #4CAF50;
-        }
-        .features, .about {
-            margin: 20px 0;
-            padding: 15px;
-            background: #ffffff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .footer {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 0.9em;
-            color: #777;
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            background: #4CAF50;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Politique de Confidentialité - Français Pratique</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f4f4f9;
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background: #4CAF50;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    h2 {
+      color: #333;
+      margin-top: 30px;
+      border-bottom: 2px solid #4CAF50;
+      padding-bottom: 5px;
+    }
+    p {
+      margin: 15px 0;
+    }
+    ul {
+      margin: 10px 0 20px 20px;
+    }
+    a.button-link {
+      display: inline-block;
+      padding: 12px 20px;
+      background-color: #4CAF50;
+      color: white;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 5px;
+      margin-top: 10px;
+    }
+    a.button-link:hover {
+      background-color: #45a049;
+    }
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      padding: 10px 0;
+      font-size: 0.9em;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
 
-<header>
-    <h1>Français Pratique</h1>
-    <img src="logoo.png" alt="Icone de l'application" style="width: 100px; height: auto;">
-</header>
+  <header>
+    <h1>Politique de Confidentialité</h1>
+  </header>
 
-<div class="container">
-    <div class="about">
-        <h2>À propos de l'application</h2>
-        <p><strong>Bienvenue dans Français Pratique, votre Compagnon d'Excellence pour une Aventure Linguistique Captivante !</strong></p>
-        <p>Téléchargez maintenant et plongez-vous dans un monde où l'apprentissage du français transcende les frontières de l'ordinaire pour devenir une expérience véritablement enrichissante.</p>
-    </div>
+  <h2>Introduction</h2>
+  <p>Bienvenue dans la politique de confidentialité de l'application <strong>Français Pratique</strong>. Nous nous engageons à protéger et à respecter votre vie privée. Cette politique explique comment nous collectons, utilisons et partageons vos informations.</p>
 
-    <div class="features">
-        <h2>Fonctionnalités Principales :</h2>
-        <ul>
-            <li><strong>Exploration Continue :</strong> Ouvrez la porte sur un monde d'apprentissage infini avec des leçons captivantes, des quiz stimulants et des défis passionnants.</li>
-            <li><strong>Connexion Communautaire :</strong> Rejoignez une communauté active de passionnés de la langue française.</li>
-        </ul>
-    </div>
+  <h2>Informations que nous collectons</h2>
+  <p>Nous pouvons collecter et traiter les données suivantes concernant vous :</p>
+  <ul>
+    <li>Informations personnelles que vous fournissez lors de l'inscription.</li>
+    <li>Données d'utilisation concernant votre interaction avec l'application.</li>
+    <li>Informations sur votre appareil, y compris le modèle, le système d'exploitation et l'identifiant unique.</li>
+  </ul>
 
-    <div class="about">
-        <h2>Pourquoi Choisir Français Pratique :</h2>
-        <p><strong>Adaptabilité Personnalisée :</strong> Que vous soyez débutant ou avancé, Français Pratique s'ajuste à vos besoins spécifiques.</p>
-    </div>
+  <h2>Comment nous utilisons vos informations</h2>
+  <p>Nous utilisons les informations que nous collectons pour :</p>
+  <ul>
+    <li>Personnaliser votre expérience d'apprentissage.</li>
+    <li>Améliorer notre application et nos services.</li>
+    <li>Vous envoyer des mises à jour et des informations sur l'application.</li>
+  </ul>
 
-    <div class="footer">
-        <p><strong>Commencez Votre Voyage Linguistique Dès Maintenant avec Français Pratique.</strong></p>
-        <a href="https://play.google.com/store/apps/details?id=com.fp.lesprosfr" class="button">Téléchargez l'application</a>
-        <!--<p>Version : 1.4.0 </p>-->
-        <p>Nécessite Android 6.0 ou version ultérieure | Téléchargements : 1 000+</p>
-        <p>Classification du contenu : 3 ans et plus</p>
-    </div>
-</div>
+  <h2>Partage de vos informations</h2>
+  <p>Nous ne vendons ni ne louons vos informations personnelles à des tiers. Nous pouvons partager vos informations avec :</p>
+  <ul>
+    <li>Des fournisseurs de services tiers qui nous aident à gérer l'application.</li>
+    <li>Les autorités légales si cela est requis par la loi.</li>
+  </ul>
+
+  <h2>Sécurité de vos informations</h2>
+  <p>Nous mettons en œuvre des mesures de sécurité pour protéger vos informations. Cependant, aucune transmission de données sur Internet n'est totalement sécurisée.</p>
+
+  <h2>Vos droits</h2>
+  <p>Vous avez le droit de :</p>
+  <ul>
+    <li>Accéder à vos informations personnelles.</li>
+    <li>Demander la correction de vos informations.</li>
+    <li>Demander la suppression de vos informations.</li>
+  </ul>
+
+  <h2>Suppression de votre compte</h2>
+  <p>Conformément aux exigences du Google Play Store, les utilisateurs de l'application <strong>Français Pratique</strong>, publiée par le développeur <strong>Stanley Laguerre</strong>, peuvent demander la suppression de leur compte à tout moment.</p>
+  <p>Pour demander la suppression de votre compte, veuillez cliquer sur le bouton ci-dessous. Cela ouvrira un e-mail pré-rempli que vous pourrez nous envoyer :</p>
+  <p>
+    <a class="button-link" href="mailto:fplivecontact@gmail.com?subject=Demande de suppression de compte - Français Pratique&body=Bonjour,%0D%0AJe souhaite supprimer mon compte utilisateur associé à l'application Français Pratique.%0D%0AMon adresse e-mail utilisée dans l'application est : [votre-email]%0D%0AMerci.">
+      ➤ Demander la suppression de mon compte
+    </a>
+  </p>
+  <p>Nous traiterons votre demande dans un délai de 7 jours ouvrés après réception.</p>
+
+  <h2>Modifications de notre politique de confidentialité</h2>
+  <p>Nous pouvons mettre à jour cette politique de confidentialité de temps à autre. Toute modification sera publiée sur cette page.</p>
+
+  <h2>Contact</h2>
+  <p>Pour toute question concernant cette politique de confidentialité ou pour toute autre demande, vous pouvez nous contacter à l'adresse suivante :</p>
+  <p><strong>fplivecontact@gmail.com</strong></p>
+
+  <footer>
+    <p>&copy; 2024 Français Pratique. Tous droits réservés.</p>
+  </footer>
 
 </body>
 </html>
